# rabbit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  frag.spv  vert.spv
data/shaders/: brdf.vert  forward.frag  forward.vert  irradiance.frag  irradiance.vert  prefilter.frag  prefilter.vert  skybox.frag  skybox.vert
docs/: doxygen
docs/html/: annotated.html  annotated_dup.js  arena_8hpp_source.html  assets_8hpp_source.html  canvas_8hpp_source.html  classes.html  classrb_1_1arena-members.html  classrb_1_1arena.html  classrb_1_1arena.js  classrb_1_1assets-members.html  classrb_1_1assets.html  classrb_1_1assets.js  classrb_1_1canvas-members.html  classrb_1_1canvas.html  classrb_1_1canvas.js  classrb_1_1client-members.html  classrb_1_1client.html  classrb_1_1client.js  classrb_1_1font-members.html  classrb_1_1font.html  classrb_1_1font.js  classrb_1_1font__coll__graph.dot  classrb_1_1font__loader-members.html  classrb_1_1font__loader.html  classrb_1_1font__loader.js  classrb_1_1image-members.html  classrb_1_1image.html  classrb_1_1image.js  classrb_1_1image__loader-members.html  classrb_1_1image__loader.html  classrb_1_1image__loader.js  classrb_1_1json__loader-members.html  classrb_1_1json__loader.html  classrb_1_1json__loader.js  classrb_1_1painter-members.html  classrb_1_1painter.html  classrb_1_1painter.js  classrb_1_1physics-members.html  classrb_1_1physics.html  classrb_1_1physics.js  (+227 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  (+33 more)
example/data/materials/: helmet.json
example/src/: main.cpp
examples/: CMakeLists.txt
examples/00_hello_world/src/: main.cpp
examples/01_basic_draw/: CMakeLists.txt
examples/01_basic_draw/src/: main.cpp
examples/02_draw_font/: CMakeLists.txt
examples/02_draw_font/src/: main.cpp
examples/03_assets_manager/: CMakeLists.txt
examples/03_assets_manager/src/: main.cpp
examples/04_physics/: CMakeLists.txt
examples/04_physics/src/: main.cpp
examples/05_ui/: CMakeLists.txt
examples/05_ui/src/: main.cpp
examples/06_input/: CMakeLists.txt
examples/06_input/src/: main.cpp
examples/07_compression/: CMakeLists.txt
examples/07_compression/src/: main.cpp
examples/demo/: CMakeLists.txt
examples/demo/src/: main.cpp
examples/hello_world/: CMakeLists.txt
examples/hello_world/src/: main.cpp
examples/home/: CMakeLists.txt
examples/home/src/: main.cpp
examples/networking/: CMakeLists.txt
examples/networking/src/: main.cpp
include/rabbit/: arena.hpp  assets.hpp  components.hpp  config.hpp  entity.hpp  format.hpp  graphics.hpp  image.hpp  math.hpp  memory.hpp  platform.hpp  pool.hpp  rabbit.hpp  reactive.hpp  stopwatch.hpp  systems.hpp  type_info.hpp  type_traits.hpp  ui.hpp  window.hpp  zone.hpp
include/rabbit/analitycs/: profiler.hpp
include/rabbit/asset/: asset_manager.hpp  fwd.hpp  handle.hpp  loader.hpp
include/rabbit/components/: camera.hpp  camera_type.hpp  geometry.hpp  sprite.hpp  subrect.hpp  tint.hpp
include/rabbit/config/: config.hpp  version.hpp
include/rabbit/core/: application.hpp  arena.hpp  assets.hpp  builder.hpp  compressor.hpp  config.hpp  entity.hpp  format.hpp  fwd.hpp  handle.hpp  injector.hpp  json.hpp  json_fwd.hpp  non_copyable.hpp  reactive.hpp  reference.hpp  settings.hpp  span.hpp  stopwatch.hpp  system.hpp  thread_pool.hpp  type_info.hpp  uuid.hpp  version.hpp
include/rabbit/engine/: application.hpp  builder.hpp  entity.hpp  fwd.hpp  settings.hpp  system.hpp
include/rabbit/entity/: entity.hpp  transform.hpp
include/rabbit/graphics/: buffer.hpp  builtin_shaders.hpp  canvas.hpp  color.hpp  command_buffer.hpp  compare_operator.hpp  cull_mode.hpp  font.hpp  front_face.hpp  fwd.hpp  graphics_device.hpp  graphics_device_factory.hpp  graphics_device_manager.hpp  graphics_device_provider.hpp  image.hpp  material.hpp  material_desc.hpp  mesh.hpp  mesh_desc.hpp  painter.hpp  polygon_mode.hpp  rect_pack.hpp  render_pass.hpp  render_pass_desc.hpp  renderer.hpp  resource_heap.hpp  s3tc.hpp  shader.hpp  shader_binding_desc.hpp  shader_binding_type.hpp  shader_desc.hpp  shader_push_constant_desc.hpp  shader_stage_flags.hpp  (+14 more)
lib/: CMakeLists.txt
lib/enet-1.3.17/: CMakeLists.txt
lib/entt-3.11.1/: CMakeLists.txt
lib/glew-2.1.0/: CMakeLists.txt
lib/gsl-4.0.0/: CMakeLists.txt
lib/imgui-1.89.2/: CMakeLists.txt  imconfig.h
lib/json-3.11.2/: CMakeLists.txt
lib/meshoptimizer-0.17/: CMakeLists.txt
lib/rgbcx-1.12/include/: rgbcx.hpp
lib/rgbcx-1.12/src/: rgbcx.cpp  rgbcx_table4.h
lib/stb/: CMakeLists.txt
lib/vma-3.0.1/: CMakeLists.txt
src/: image.cpp
src/analytics/: profiler.cpp
src/asset/: asset_manager.cpp
src/core/: application.cpp  builder.cpp  compressor.cpp  reference.cpp  stopwatch.cpp  system.cpp  thread_pool.cpp
src/engine/: application.cpp  builder.cpp  system.cpp
src/graphics/: buffer.cpp  builtin_shaders.cpp  canvas.cpp  command_buffer.cpp  font.cpp  graphics_device.cpp  graphics_device_factory.cpp  graphics_device_manager.cpp  graphics_device_provider.cpp  image.cpp  material.cpp  mesh.cpp  painter.cpp  rect_pack.cpp  resource_heap.cpp  s3tc.cpp  shader.cpp  sprite.cpp  swapchain.cpp  texture.cpp  vertex.cpp  vertex_layout.cpp
src/imgui/: ui_imgui.cpp
src/loaders/: font_loader.cpp  image_loader.cpp  json_loader.cpp  material_loader.cpp  mesh_loader.cpp  texture_loader.cpp
src/physics/: body.cpp  physics.cpp  shape.cpp
src/platform/: input.cpp  window.cpp  window_factory.cpp  window_manager.cpp  window_provider.cpp
src/systems/: canvas.cpp  render_system.cpp  renderer.cpp
src/tools/: b2h.cpp
src/ui/: ui.cpp
src/vulkan/: graphics_vulkan.cpp
src/win32/: window_win32.cpp
(+75 files in other folders)
