cmake_minimum_required (VERSION 3.8.2)

add_subdirectory ("00_hello_world")

add_subdirectory ("01_basic_draw")

add_subdirectory ("02_draw_font")

add_subdirectory ("03_assets_manager")

add_subdirectory ("04_physics")

add_subdirectory ("05_ui")

add_subdirectory ("06_input")

add_subdirectory ("demo")

add_subdirectory ("networking")
